--- a/project-1/src/components/post-list-item/post-list-item.css
+++ b/project-1/src/components/post-list-item/post-list-item.css
@@ -52,3 +52,8 @@
 .app-list-item.important .btn-star {
     color: #aeaeae;
 }
+
+.app-list-item .post-date {
+    font-size: 14px;
+    margin: auto 10px;
+}
