lesson_04 first commit

--- a/project-1/src/components/post-list/post-list.css
+++ b/project-1/src/components/post-list/post-list.css
@@ -2,6 +2,7 @@
     margin-top: 50px;
 }
 .app-list .list-group-item {
-  padding: 20px 35px 10px 35px;
+  padding: auto 35px;
   margin-top: 10px;
 }
+
