--- a/project-1/src/components/post-list-item/post-list-item.css
+++ b/project-1/src/components/post-list-item/post-list-item.css
@@ -2,7 +2,7 @@
     font-size: 1.25rem;   
 }
 
-.app-list-item button {
+.app-list-item button, .app-list-item .btn-accept {
     width: 35px;
     height: 35px;
     margin: auto;
@@ -20,6 +20,30 @@
 }
 .app-list-item .btn-trash {
     color: red;
+}
+.app-list-item .btn-edit, .app-list-item .btn-accept{
+    border: 1px solid #17a2b8;
+    width: 50px;
+    margin-right: 10px;
+    transition: 0.2s all;
+    color: #17a2b8;
+}
+
+.app-list-item .btn-edit:hover, .app-list-item .btn-accept:hover {
+    color: #fff;
+    background-color: #17a2b8;
+}
+
+.app-list-item .btn-accept {
+    margin-left: 10px;
+}
+
+.app-list-item .edit-label {
+    display: none;
+}
+
+.app-list-item.visibility .app-list-item-label {
+    display: block;
 }
 /* .app-list-item .fa-heart {
     width: 35px;
@@ -41,7 +65,7 @@
     transition: 0.5s all;
 }
 
-.app-list-item.like .fa-heart {
+.app-list-item.like .btn-heart {
     color: red;
 }
 
@@ -51,4 +75,12 @@
 
 .app-list-item.important .btn-star {
     color: #FFD700;
+}
+
+.app-list-item.visibility .edit-label {
+    display: block;
+}
+
+.app-list-item.visibility .app-list-item-label {
+    display: none;
 }
