--- a/project-2/src/index.css
+++ b/project-2/src/index.css
@@ -18,3 +18,11 @@ a:active {
     text-decoration: none;
     color: inherit;
 }
+
+.app {
+    overflow-x: hidden;
+    background: url('./img/got.jpg') center center no-repeat;
+    background-size: cover;
+    font-size: 16px;
+    height: 100vh;
+}
